# game-jam-not-worthy

not_worthy/: .gitignore  Cargo.toml
not_worthy/assets/: game.data.json
not_worthy/src/: animation.rs  asset_load.rs  combat.rs  effects.rs  end_boss.rs  enemy.rs  game_manager.rs  game_state.rs  hit_detection.rs  input_manager.rs  level_loading.rs  main.rs  movement.rs  player_states.rs  shadows.rs  spawning.rs  state_handling.rs  summoning.rs  ui_stuff.rs
not_worthy/webbuild/: index.html
