[package]
name = "not_worthy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1", features = ["wav"] }
avian2d = "0.2.0"
bevy_asset_loader = { version = "0.22.0", features = ["2d"] }
bevy_sprite3d = "4.0.0"
leafwing-input-manager = "0.16.0"
rand = "0.8.5"
bevy_wasm_window_resize = { git = "https://github.com/Leinnan/bevy_wasm_window_resize.git" }
bevy_common_assets = { version = "0.12.0", features = ["json"] }
serde = "1.0.217"
serde_json = "1.0.137"
bevy_pkv = "0.12.0"
bevy_firework = { version = "0.6.0", default-features = false }
bevy_pipelines_ready = "0.5.0"
pid = "4.0.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
